adding swagger documentation
