# docs/swagger.json
@@ -6,7 +6,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/users": {
+        "/api/todos": {
             "get": {
                 "description": "Get All todo attached to logged in user, return list of todos",
                 "consumes": [
@@ -43,6 +43,46 @@
                     }
                 }
             }
+        },
+        "/api/user/register": {
+            "post": {
+                "description": "Register new user to the system",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Register New User",
+                "parameters": [
+                    {
+                        "description": "User registration Data",
+                        "name": "AdminData",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserRegisterParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    },
+                    "401": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": ""
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -55,6 +95,32 @@
                 },
                 "status": {
                     "type": "boolean"
+                }
+            }
+        },
+        "dto.UserRegisterParam": {
+            "type": "object",
+            "required": [
+                "email",
+                "name",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "example": "louisaldorio@gmail.com"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 5,
+                    "example": "Louis Aldorio"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 4,
+                    "example": "12345"
                 }
             }
         }
